Exercise oeprations for bff
